--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-community/async-storage": "^1.5.1",
     "@react-native-firebase/app": "^0.3.0",
     "@react-native-firebase/auth": "^0.3.0",
+    "@types/url-parse": "^1.4.3",
     "@ui-kitten/eva-icons": "^4.2.0-beta.1",
     "apisauce": "1.0.3",
     "i18n-js": "^3.0.11",
@@ -48,6 +49,7 @@
     "react-navigation-tabs": "^2.4.1",
     "reactotron-mst": "^3.1.1",
     "reactotron-react-native": "^4.0.0-beta.1",
+    "url-parse": "^1.4.3",
     "validate.js": "0.13.1"
   },
   "devDependencies": {
